infrastructure/7_ec2.tf
resource "aws_instance" "AVS-ec2-instance" {

    ami = "ami-00546eea158566779" # 使用之前我们选的 ubuntu 20 ami id

    instance_type = "t2.micro" # 使用我们之前选的 instance type

    vpc_security_group_ids = [aws_security_group.AVS-sg.id] # 使用我们创建的 安全组 注意这里 "aws_security_group." 后面接的名字是之前写的那个

    key_name = "awesome_terraform_aws" # 使用我们上一节中创建的 key pair

    subnet_id = aws_subnet.AVS-subnet-alpha.id

    associate_public_ip_address = true

    tags = {
        Name = "AVS-ec2-instance"
    }
}

# resource "aws_instance" "my_second_ec2_instance" {

#     ami = "ami-0885b1f6bd170450c" # 使用之前我们选的 ubuntu 20 ami id

#     instance_type = "t2.micro" # 使用我们之前选的 instance type

#     vpc_security_group_ids = [aws_security_group.my_first_ec2_security_group.id] # 使用我们创建的 安全组 注意这里 "aws_security_group." 后面接的名字是之前写的那个

#     key_name = "awesome_terraform_aws" # 使用我们上一节中创建的 key pair

#     subnet_id = aws_subnet.my_subnet_beta.id

#     associate_public_ip_address = true

#     tags = {
#         Name = "my-second-ec2-instance"
#     }
# }
